# lumina-card-exporter.github.io

./: .gitignore  CardExporter.py  CardImporter.py  GoogleSheetsCSVImporter.py  ImageCardTransformer.py  PDFImporter.py  QRCodeStamper.py  README.md  card_to_image.py  index.html  main.py  main_js.py  pyproject.toml
card_elements/: config.json
files/: test.csv
