[project]
name = "lumina-card-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Yannou27",email = "yann.tireau27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
